# pdf2svgwrapper

./: CMakeLists.txt  Dockerfile  README.md  vcpkg.json
src/: pdf2svg.cpp  pdf2svg.h
